syntax = "proto3";

package rental.v1;

option go_package="coolcar/rental/proto/v1;rentalpb";

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse);
}

message CreateTripRequest {
  string start = 1;
}

message CreateTripResponse {

}